--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.13.3",
     "express": "^4.13.3",
     "jest": "15.1.1",
+    "moment": "^2.15.0",
     "mongodb": "^2.1.6",
     "morgan": "^1.7.0"
   },
