Fixed some lint errors, and added lint to build in travis. This resolves #6. Added logging. This resolves #7.

--- a/.eslintrc
+++ b/.eslintrc
@@ -19,6 +19,7 @@
     ],
     "new-cap": 0,
     "func-names": 0,
-    "comma-dangle": 0
+    "comma-dangle": 0,
+    "no-underscore-dangle": 0
   }
 }
