--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
     "babel-cli": "^6.14.0",
     "babel-preset-es2015": "^6.14.0",
     "body-parser": "^1.13.3",
+    "debug": "latest",
     "express": "^4.13.3",
     "moment": "^2.15.0",
     "mongodb": "^2.1.6",
     "morgan": "^1.7.0",
-    "regexp": "1.0.0",
-    "debug": "latest"
+    "morgan-debug": "^1.0.0",
+    "regexp": "1.0.0"
   },
   "repository": {},
   "scripts": {
