--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.13.3",
     "moment": "^2.15.0",
     "mongodb": "^2.1.6",
+    "mongoose": "^4.6.0",
     "morgan": "^1.7.0"
   },
   "repository": {},
