--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel": "^6.5.2",
     "babel-cli": "^6.14.0",
     "babel-preset-es2015": "^6.14.0",
+    "bluebird": "^3.4.6",
     "body-parser": "^1.13.3",
     "debug": "latest",
     "express": "^4.13.3",
